rusty-cdk-macros/tests/fails/log_group_name_empty.rs
use rusty_cdk_macros::log_group_name;

fn example() {
    let name = log_group_name!("");
}

fn main() {}